Remove email action buttons

--- a/1.5.2
+++ b/1.5.2
@@ -195,6 +195,67 @@
             "platformActionListContext": "Record",
             "operation": "remove"
           }
+        },
+        {
+          "jiraTicket": "ac-46595j1a",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595j1b",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "sendEmail",
+          "optionsMap": {
+            "operation": "remove"
+          }
+        }
+      ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "AC Lead Layout Clone",
+      "description": "Remove Platform actions from Cloned Page Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595jj1",
+          "description": "Remove standard New note from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "FeedItem.ContentNote",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595jj1a",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595jj1b",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "sendEmail",
+          "optionsMap": {
+            "operation": "remove"
+          }
         }
       ]
     },
@@ -212,6 +273,27 @@
             "platformActionType": "QuickAction",
             "platformActionName": "FeedItem.ContentNote",
             "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595j2a",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595j2b",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "sendEmail",
+          "optionsMap": {
             "operation": "remove"
           }
         }
