--- a/1.5.2
+++ b/1.5.2
@@ -381,7 +381,7 @@
       "description": "Remove Platform actions from Layout",
       "taskList": [
         {
-          "jiraTicket": "ac-46595p",
+          "jiraTicket": "ac-46595p1",
           "description": "Remove standard New note from  layout Mobile and Lightning Actions section",
           "actionType": "PlatformAction",
           "actionTypeName": "nothing",
@@ -389,6 +389,27 @@
             "platformActionType": "QuickAction",
             "platformActionName": "FeedItem.ContentNote",
             "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595p2",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595p3",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "sendEmail",
+          "optionsMap": {
             "operation": "remove"
           }
         }
