--- a/1.5.2
+++ b/1.5.2
@@ -221,7 +221,7 @@
     },
     {
       "sObjectName": "Lead",
-      "instructionTypeName": "AC Lead Layout Clone",
+      "instructionTypeName": "command__AC Lead Layout Clone",
       "description": "Remove Platform actions from Cloned Page Layout",
       "taskList": [
         {
@@ -261,7 +261,7 @@
     },
     {
       "sObjectName": "Lead",
-      "instructionTypeName": "Lead Layout",
+      "instructionTypeName": "command__Lead Layout",
       "description": "Remove Platform actions from Layout",
       "taskList": [
         {
