--- a/1.5.2
+++ b/1.5.2
@@ -212,7 +212,7 @@
           "jiraTicket": "ac-46595j1b",
           "description": "Remove standard email button from quick actions",
           "actionType": "QuickAction",
-          "actionTypeName": "sendEmail",
+          "actionTypeName": "command__sendEmail",
           "optionsMap": {
             "operation": "remove"
           }
@@ -252,7 +252,7 @@
           "jiraTicket": "ac-46595jj1b",
           "description": "Remove standard email button from quick actions",
           "actionType": "QuickAction",
-          "actionTypeName": "sendEmail",
+          "actionTypeName": "command__sendEmail",
           "optionsMap": {
             "operation": "remove"
           }
@@ -292,7 +292,7 @@
           "jiraTicket": "ac-46595j2b",
           "description": "Remove standard email button from quick actions",
           "actionType": "QuickAction",
-          "actionTypeName": "sendEmail",
+          "actionTypeName": "command__sendEmail",
           "optionsMap": {
             "operation": "remove"
           }
@@ -408,7 +408,7 @@
           "jiraTicket": "ac-46595p3",
           "description": "Remove standard email button from quick actions",
           "actionType": "QuickAction",
-          "actionTypeName": "sendEmail",
+          "actionTypeName": "command__sendEmail",
           "optionsMap": {
             "operation": "remove"
           }
