--- a/1.5.2
+++ b/1.5.2
@@ -221,7 +221,7 @@
     },
     {
       "sObjectName": "Lead",
-      "instructionTypeName": "command__AC Lead Layout Clone",
+      "instructionTypeName": "AC Lead Layout Clone",
       "description": "Remove Platform actions from Cloned Page Layout",
       "taskList": [
         {
@@ -261,7 +261,7 @@
     },
     {
       "sObjectName": "Lead",
-      "instructionTypeName": "command__Lead Layout",
+      "instructionTypeName": "Lead Layout",
       "description": "Remove Platform actions from Layout",
       "taskList": [
         {
@@ -272,18 +272,6 @@
           "optionsMap": {
             "platformActionType": "QuickAction",
             "platformActionName": "FeedItem.ContentNote",
-            "platformActionListContext": "Record",
-            "operation": "remove"
-          }
-        },
-        {
-          "jiraTicket": "ac-46595j2a",
-          "description": "Remove Email button from layout Mobile and Lightning Actions section",
-          "actionType": "PlatformAction",
-          "actionTypeName": "nothing",
-          "optionsMap": {
-            "platformActionType": "QuickAction",
-            "platformActionName": "command__SendEmail",
             "platformActionListContext": "Record",
             "operation": "remove"
           }
