defect/ac-53786 | Remove email button from leads and client (#123)
* Remove email action buttons

* Remove email button from layouts

* Tweaks

* add namespace

* Remove namespace for prod orgs

* remove idea folder

--- a/1.5.2
+++ b/1.5.2
@@ -195,6 +195,67 @@
             "platformActionListContext": "Record",
             "operation": "remove"
           }
+        },
+        {
+          "jiraTicket": "ac-46595j1a",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595j1b",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "command__sendEmail",
+          "optionsMap": {
+            "operation": "remove"
+          }
+        }
+      ]
+    },
+    {
+      "sObjectName": "Lead",
+      "instructionTypeName": "AC Lead Layout Clone",
+      "description": "Remove Platform actions from Cloned Page Layout",
+      "taskList": [
+        {
+          "jiraTicket": "ac-46595jj1",
+          "description": "Remove standard New note from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "FeedItem.ContentNote",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595jj1a",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595jj1b",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "command__sendEmail",
+          "optionsMap": {
+            "operation": "remove"
+          }
         }
       ]
     },
@@ -212,6 +273,15 @@
             "platformActionType": "QuickAction",
             "platformActionName": "FeedItem.ContentNote",
             "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595j2b",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "command__sendEmail",
+          "optionsMap": {
             "operation": "remove"
           }
         }
@@ -299,7 +369,7 @@
       "description": "Remove Platform actions from Layout",
       "taskList": [
         {
-          "jiraTicket": "ac-46595p",
+          "jiraTicket": "ac-46595p1",
           "description": "Remove standard New note from  layout Mobile and Lightning Actions section",
           "actionType": "PlatformAction",
           "actionTypeName": "nothing",
@@ -307,6 +377,27 @@
             "platformActionType": "QuickAction",
             "platformActionName": "FeedItem.ContentNote",
             "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595p2",
+          "description": "Remove Email button from layout Mobile and Lightning Actions section",
+          "actionType": "PlatformAction",
+          "actionTypeName": "nothing",
+          "optionsMap": {
+            "platformActionType": "QuickAction",
+            "platformActionName": "command__SendEmail",
+            "platformActionListContext": "Record",
+            "operation": "remove"
+          }
+        },
+        {
+          "jiraTicket": "ac-46595p3",
+          "description": "Remove standard email button from quick actions",
+          "actionType": "QuickAction",
+          "actionTypeName": "command__sendEmail",
+          "optionsMap": {
             "operation": "remove"
           }
         }
