testing all together

--- a/1.9.1
+++ b/1.9.1
@@ -31,6 +31,7 @@
             "oauthScope": "refresh_token api",
             "authProvider": "AdvisorsCommandAuthAPIProvider",
             "protocol": "Oauth",
+            "principalType": "PerUser",
             "useBaseUrl": "True"
           }
         }
