testing all together

--- a/1.9.1
+++ b/1.9.1
@@ -10,7 +10,7 @@
           "actionTypeName": "none",
           "optionsMap": {
             "operation": "create",
-            "referenceConnectedApp": "AdvisorsCommandAuthAPI",
+            "referenceConnectedApp": "AdvisorsCommandAPIAuth",
             "defaultScopes": "refresh_token api",
             "providerType": "Salesforce",
             "setCallBackURL": "True"
