peruser to NamedUser

--- a/1.9.1
+++ b/1.9.1
@@ -31,7 +31,7 @@
             "oauthScope": "refresh_token api",
             "authProvider": "AdvisorsCommandAuthAPIProvider",
             "protocol": "Oauth",
-            "principalType": "PerUser",
+            "principalType": "NamedUser",
             "useBaseUrl": "True"
           }
         }
