--- a/0.0.1
+++ b/0.0.1
@@ -15,6 +15,21 @@
           }
         }
       ]
+    },
+    {
+      "description": "Update quote settings to be disabled",
+      "taskList":[
+        {
+          "jiraTicket":"ac-57219",
+          "actionType":"QuoteSetting",
+          "actionTypeName":"None",
+          "optionsMap":{
+            "operation" : "update",
+            "settingName" : "Quote",
+            "settingEnabled" : "false"
+          }
+        }
+      ]
     }
   ]
 }
