removed namespace, standard pages.

--- a/1.9.1
+++ b/1.9.1
@@ -2,7 +2,7 @@
   "instructionList": [
     {
       "sObjectName": "Event",
-      "instructionTypeName": "command__Event Layout",
+      "instructionTypeName": "Event Layout",
       "description": "Add maintain owner field to Event Layout",
       "taskList": [
         {
@@ -41,7 +41,7 @@
     },
     {
       "sObjectName": "Task",
-      "instructionTypeName": "command__Task Layout",
+      "instructionTypeName": "Task Layout",
       "description": "Add maintain owner field to AC Task Layout",
       "taskList": [
         {
